# NixCompress

./: .gitignore  CMakeLists.txt  Makefile  README.md
source/: archive.c  archive.h  args.c  args.h  bin-tree.c  bin-tree.h  bool.h  huffman.c  huffman.h  list.c  list.h  main.c  structs.h
source/linux/: simple_draw.c  simple_draw.h
source/windows/: simple_draw.c  simple_draw.h
